exports[`Functional tests mutation create 1`] = `
Object {
  "data": Object {
    "createPost": Object {
      "post": Object {
        "animals": Object {
          "edges": Array [
            Object {
              "node": Object {
                "Weight": 1008.1,
                "age": 1008,
                "birthday": "Thu Nov 11 2100 00:00:00 GMT+0700 (SE Asia Standard Time)",
                "id": "UG9zdDo4",
                "isCat": true,
                "name": "animal2",
              },
            },
            Object {
              "node": Object {
                "Weight": 1009.1,
                "age": 1009,
                "birthday": "Thu Nov 11 2100 00:00:00 GMT+0700 (SE Asia Standard Time)",
                "id": "UG9zdDo5",
                "isCat": false,
                "name": "animal2",
              },
            },
          ],
        },
        "owner": Object {
          "name": "user5",
          "pets": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "Weight": 1007.1,
                  "age": 1007,
                  "birthday": "Thu Nov 11 2100 00:00:00 GMT+0700 (SE Asia Standard Time)",
                  "id": "VXNlcjo=",
                  "isCat": false,
                  "name": "pet1",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;

exports[`Functional tests node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "Rex",
    },
  },
}
`;

exports[`Functional tests query connection 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animals": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Rex",
            },
          },
          Object {
            "node": Object {
              "name": "Felix",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`Functional tests query one: animal 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animal": Object {
        "Weight": 10.1,
        "age": 6,
        "birthday": "Thu Nov 11 2010 00:00:00 GMT+0700 (SE Asia Standard Time)",
        "id": "QW5pbWFsOjE=",
        "isCat": false,
        "name": "Rex",
      },
    },
  },
}
`;

exports[`Functional tests query one: post 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "post": Object {
        "animals": Object {
          "edges": Array [
            Object {
              "node": Object {
                "Weight": 10.1,
                "age": 6,
                "birthday": "Thu Nov 11 2010 00:00:00 GMT+0700 (SE Asia Standard Time)",
                "id": "UG9zdDox",
                "isCat": false,
                "name": "Rex",
              },
            },
            Object {
              "node": Object {
                "Weight": 13.1,
                "age": 3,
                "birthday": "Fri Mar 01 2013 00:00:00 GMT+0700 (SE Asia Standard Time)",
                "id": "UG9zdDoy",
                "isCat": false,
                "name": "Felix",
              },
            },
            Object {
              "node": Object {
                "Weight": 2.1,
                "age": 8,
                "birthday": "Tue May 06 2008 00:00:00 GMT+0700 (SE Asia Standard Time)",
                "id": "UG9zdDoz",
                "isCat": false,
                "name": "Jeck",
              },
            },
          ],
        },
        "owner": Object {
          "name": "John",
          "pets": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "Weight": 13.1,
                  "age": 3,
                  "birthday": "Fri Mar 01 2013 00:00:00 GMT+0700 (SE Asia Standard Time)",
                  "id": "VXNlcjo=",
                  "isCat": false,
                  "name": "Felix",
                },
              },
              Object {
                "node": Object {
                  "Weight": 2.1,
                  "age": 8,
                  "birthday": "Tue May 06 2008 00:00:00 GMT+0700 (SE Asia Standard Time)",
                  "id": "VXNlcjo=",
                  "isCat": false,
                  "name": "Jeck",
                },
              },
              Object {
                "node": Object {
                  "Weight": 12.1,
                  "age": 7,
                  "birthday": "Sat Dec 12 2009 00:00:00 GMT+0700 (SE Asia Standard Time)",
                  "id": "VXNlcjo=",
                  "isCat": false,
                  "name": "Morph",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;

exports[`Functional tests subscribe connection 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animals": Object {
        "edges": Array [
          Object {
            "node": Object {
              "name": "Felix",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`Functional tests subscribe connection 2`] = `
Array [
  Array [
    "123",
    "animal",
    Object {
      "Weight": 10.1,
      "age": 6,
      "birthday": 2010-11-10T17:00:00.000Z,
      "id": 1,
      "isCat": false,
      "name": "testn",
    },
    Object {
      "subscriptionId": "123",
    },
  ],
]
`;

exports[`Functional tests subscribe connection 3`] = `Array []`;

exports[`Functional tests subscribe connection 4`] = `
Array [
  Array [
    "123",
    "animal",
    Object {
      "name": "axz",
    },
    Object {
      "subscriptionId": "123",
    },
  ],
]
`;

exports[`Functional tests subscribe one 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "animal": Object {
        "name": "Rex",
      },
    },
  },
}
`;

exports[`Functional tests subscribe one 2`] = `
Array [
  Array [
    "123",
    "animal",
    Object {
      "Weight": 10.1,
      "age": 6,
      "birthday": 2010-11-10T17:00:00.000Z,
      "id": 1,
      "isCat": false,
      "name": "testn",
    },
    Object {
      "subscriptionId": "123",
    },
  ],
]
`;
